<resources>
    <string name="app_name">Manage Trip</string>
    <string name="dateFormat">DD/MM/YYYY</string>
    <string name="tripName">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="tripType">Trip Type</string>
    <string name="cityBreakType">City Break</string>
    <string name="seaSideType">Sea Side</string>
    <string name="mountainsType">Mountains</string>
    <string name="price">Price(eur)</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="rating">Rating</string>
    <string name="save">SAVE</string>
</resources>
